# src/tasks/tasksController.js
@@ -5,6 +5,9 @@ var __decorate = (this && this.__decorate) || function (decorators, target, key,
     else for (var i = decorators.length - 1; i >= 0; i--) if (d = decorators[i]) r = (c < 3 ? d(r) : c > 3 ? d(target, key, r) : d(target, key)) || r;
     return c > 3 && r && Object.defineProperty(target, key, r), r;
 };
+var __metadata = (this && this.__metadata) || function (k, v) {
+    if (typeof Reflect === "object" && typeof Reflect.metadata === "function") return Reflect.metadata(k, v);
+};
 var __param = (this && this.__param) || function (paramIndex, decorator) {
     return function (target, key) { decorator(target, key, paramIndex); }
 };
@@ -20,15 +23,20 @@ var __awaiter = (this && this.__awaiter) || function (thisArg, _arguments, P, ge
 Object.defineProperty(exports, "__esModule", { value: true });
 exports.TasksController = void 0;
 const tsoa_1 = require("tsoa");
+const task_entity_1 = require("../models/task.entity");
 const tasksService_1 = require("./tasksService");
 let TasksController = class TasksController extends tsoa_1.Controller {
+    constructor() {
+        super();
+        this.taskService = new tasksService_1.TasksService();
+    }
     /**
      * Gets list of all tasks.
      *
      */
     getTasks() {
         return __awaiter(this, void 0, void 0, function* () {
-            return new tasksService_1.TasksService().getTasks();
+            return this.taskService.getTasks();
         });
     }
     /**
@@ -37,78 +45,51 @@ let TasksController = class TasksController extends tsoa_1.Controller {
      */
     createTask(requestBody) {
         return __awaiter(this, void 0, void 0, function* () {
-            this.setStatus(201); // set return status 201
-            return new tasksService_1.TasksService().addTask(requestBody);
+            return this.taskService.addTask(requestBody);
         });
     }
     /**
      * Deletes a task given the id.
      * @taskId The id of the task to delete.
      */
-    deleteTask(taskId, notFoundResponse) {
+    deleteTask(taskId) {
         return __awaiter(this, void 0, void 0, function* () {
-            if (!taskId) {
-                return notFoundResponse(404, {
-                    reason: "Please provide a taskId to delete.",
-                });
-            }
-            new tasksService_1.TasksService().deleteTask(taskId);
+            this.taskService.deleteTask(taskId);
+        });
+    }
+    deleteAllTasks() {
+        return __awaiter(this, void 0, void 0, function* () {
+            this.taskService.deleteAllTasks();
+            return `Deleted all tasks`;
         });
     }
     /**
      * Get the task with the given id.
      * @taskId The id of the task to get.
      */
-    getTaskById(taskId, notFoundResponse) {
+    getTaskById(taskId) {
         return __awaiter(this, void 0, void 0, function* () {
-            if (!taskId) {
-                return notFoundResponse(404, {
-                    reason: "Please provide a taskId to look for.",
-                });
-            }
-            const task = new tasksService_1.TasksService().getTaskById(taskId);
-            if (task) {
-                return task;
-            }
-            else {
-                return notFoundResponse(404, {
-                    reason: `A task does not exist with ID: ${taskId}`,
-                });
-            }
+            const task = this.taskService.getTaskById(taskId);
+            return task;
         });
     }
     /**
      * Toggles the completion status of the task with the given id.
      * @taskId The id of the task to toggle.
      */
-    toggleTask(taskId, notFoundResponse) {
+    toggleTask(taskId) {
         return __awaiter(this, void 0, void 0, function* () {
-            if (!taskId) {
-                return notFoundResponse(404, {
-                    reason: "Please provide a taskId to toggle.",
-                });
-            }
-            const success = new tasksService_1.TasksService().toggleTask(taskId);
-            if (success) {
-                return `Toggled task with task id: ${taskId}`;
-            }
-            else {
-                return `Could not find task with task id: ${taskId}`;
-            }
+            const success = this.taskService.toggleTask(taskId);
+            return success;
         });
     }
     /**
      * Toggles the completion status of all tasks to the given status.
      * @taskId The status to toggle to. True = Complete; False = Incomplete.
      */
-    toggleAll(setting, notFoundResponse) {
+    toggleAll(setting) {
         return __awaiter(this, void 0, void 0, function* () {
-            if (!setting) {
-                return notFoundResponse(404, {
-                    reason: "Please provide a setting to toggle all tasks to: true or false.",
-                });
-            }
-            new tasksService_1.TasksService().toggleAll(setting);
+            this.taskService.toggleAll(setting);
         });
     }
 };
@@ -117,10 +98,13 @@ __decorate([
         {
             id: "0",
             name: "An example task",
-            completed: true,
+            status: task_entity_1.TaskStatus.todo,
         },
     ]),
-    (0, tsoa_1.Get)()
+    (0, tsoa_1.Get)(),
+    __metadata("design:type", Function),
+    __metadata("design:paramtypes", []),
+    __metadata("design:returntype", Promise)
 ], TasksController.prototype, "getTasks", null);
 __decorate([
     (0, tsoa_1.Example)("Successfully added task.")
@@ -131,29 +115,47 @@ __decorate([
     (0, tsoa_1.Post)(),
     (0, tsoa_1.SuccessResponse)("201", "Created") // Custom success response
     ,
-    __param(0, (0, tsoa_1.Body)())
+    __param(0, (0, tsoa_1.Body)()),
+    __metadata("design:type", Function),
+    __metadata("design:paramtypes", [Object]),
+    __metadata("design:returntype", Promise)
 ], TasksController.prototype, "createTask", null);
 __decorate([
     (0, tsoa_1.Delete)("{taskId}"),
     __param(0, (0, tsoa_1.Path)()),
-    __param(1, (0, tsoa_1.Res)())
+    __metadata("design:type", Function),
+    __metadata("design:paramtypes", [Number]),
+    __metadata("design:returntype", Promise)
 ], TasksController.prototype, "deleteTask", null);
+__decorate([
+    (0, tsoa_1.Delete)(),
+    __metadata("design:type", Function),
+    __metadata("design:paramtypes", []),
+    __metadata("design:returntype", Promise)
+], TasksController.prototype, "deleteAllTasks", null);
 __decorate([
     (0, tsoa_1.Get)("{taskId}"),
     __param(0, (0, tsoa_1.Path)()),
-    __param(1, (0, tsoa_1.Res)())
+    __metadata("design:type", Function),
+    __metadata("design:paramtypes", [Number]),
+    __metadata("design:returntype", Promise)
 ], TasksController.prototype, "getTaskById", null);
 __decorate([
     (0, tsoa_1.Put)("/toggle/{taskId}"),
     __param(0, (0, tsoa_1.Path)()),
-    __param(1, (0, tsoa_1.Res)())
+    __metadata("design:type", Function),
+    __metadata("design:paramtypes", [Number]),
+    __metadata("design:returntype", Promise)
 ], TasksController.prototype, "toggleTask", null);
 __decorate([
     (0, tsoa_1.Put)("/markAll/{setting}"),
     __param(0, (0, tsoa_1.Path)()),
-    __param(1, (0, tsoa_1.Res)())
+    __metadata("design:type", Function),
+    __metadata("design:paramtypes", [String]),
+    __metadata("design:returntype", Promise)
 ], TasksController.prototype, "toggleAll", null);
 TasksController = __decorate([
-    (0, tsoa_1.Route)("tasks")
+    (0, tsoa_1.Route)("tasks"),
+    __metadata("design:paramtypes", [])
 ], TasksController);
 exports.TasksController = TasksController;
